2005-02-11  Christian Kellner  <gicmo@gnome.org>

	* libgnomevfs/gnome-vfs-xfer.c (gnome_vfs_xfer_delete_items_common):
	Plug some more leaks. This fixes bug #166109.

2005-02-11  Christian Kellner  <gicmo@gnome.org>

	* modules/sftp-method.c: Plug some leaks. This should fix 
	bug #153264.

2005-02-11  Nate Nielsen  <nielsen@memberwebs.com>

	* modules/smb-method.c (lookup_user_cache): Fix crash when user 
	name specified in smb URI. See bug #167075. 
	Thanks Narayana Pattipati <narayana.pattipati@wipro.com>
	* modules/smb-method.c: Fix server cache access for IPC$ shares.
	* modules/smb-method.c: Allow authentication with an empty password.
	* modules/smb-method.c: Try 'guest' login instead of blank for 
	compatibility with certain SMB configurations.
	
2005-02-11  Christian Kellner  <gicmo@gnome.org>

	* test/test-uri.c: Replaced old obsolete uri
	tests with new ones. Should make check work
	again.

2005-02-10  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Post release version bump.

=== gnome-vfs 2.9.91 ===

2005-02-10  Christian Kellner  <gicmo@gnome.org>

	* NEWS:
	Update for release.

2005-02-09  Christian Kellner  <gicmo@gnome.org>

	* doc/gnome-vfs-2.0-sections.txt:
	* doc/tmpl/gnome-vfs-directory-list-ops.sgml:
	* doc/tmpl/gnome-vfs-utils.sgml:
	* libgnomevfs/gnome-vfs-directory.c:
	* libgnomevfs/gnome-vfs-utils.c:
	* libgnomevfs/gnome-vfs-utils.h:
	Doc updates! This fixes bug #160837.

2005-02-09  Christian Kellner  <gicmo@gnome.org>
	
	* libgnomevfs/gnome-vfs-directory.h (gnome_vfs_directory_visit):
	Rename uri to text_uri to be consistent with the other functions.
	Fixes bug #140939.

2005-02-09  Christian Kellner  <gicmo@gnome.org>
	
	* libgnomevfs/gnome-vfs-cdrom.c (_gnome_vfs_get_cdrom_type):
	return CDS_NO_INFO on OS X to fix broken build.

2005-02-09  Christian Kellner  <gicmo@gnome.org>

	* modules/sftp-method.c (sftp_connect): Increased timeout and
	return GNOME_VFS_ERROR_TIMEOUT instead if ERROR_IO.
	