@@ -1,3 +1,8 @@
+2005-02-14  Christian Kellner  <gicmo@gnome.org>
+
+	* libgnomevfs/gnome-vfs-socket.c: Make read and write calls aware
+	of cancellation. This should fix bug #151380.
+
 2005-02-11  Christian Kellner  <gicmo@gnome.org>
 
 	* libgnomevfs/gnome-vfs-xfer.c (gnome_vfs_xfer_delete_items_common):
